corrects search table spacings

--- a/server/public/views/styles/style.css
+++ b/server/public/views/styles/style.css
@@ -172,7 +172,6 @@ ul {
     width: auto;
 }
 .exit-button {
-    margin-top: -5px;
     float: right;
 }
 .date-container *, .add-box-header h3, .add-box-header input {
@@ -192,7 +191,7 @@ ul {
 .meal-container {
     margin-top: 20px;
 }
-.meal-container div, .meal-container ul {
+.meal-container div, .meal-container ul, .food-choices ul, .foods-list ul  {
     margin: 2px 0;
 }
 .meal-container h3 {
@@ -203,9 +202,9 @@ ul {
     text-align: left;
     margin: 0 0 0 20px;
 }
-.foods-list h4, .foods-choices-list h4 {
-    float: left;
-    margin: 0 0 0 20px;
+.add-box h4 {
+    text-align: left;
+    margin: 10px 0 0 5px;
 }
 .meal-container p {
     display: inline-block;
@@ -220,8 +219,12 @@ ul {
     width: 10%;
     margin: 0;
 }
-.foods-header, .food-choices-header {
+.foods-header {
     width: 100%;
+}
+.foods-header li {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 .food-input input {
